chore: Downgrade to Java 17
To keep things consistent for now, not using any Java 21 anywhere.